# PhysicellPython

./: .gitignore  AddGitSubmodule.cmake  CMakeLists.txt  README.md  setup.py
cmake/Modules/: BuildBoost.cmake
python/: CMakeLists.txt
python/tests/: MultiCellDSsavetest.py  basicmodeltest.py  biorobots.py  biorobots_legacy.py  setupmicroenvironmenttest.py  visualization.py  xml_parse.py
sample_projects/: CMakeLists.txt
sample_projects/biorobots/: CMakeLists.txt  main-biorobots.cpp
sample_projects/biorobots/custom_modules/: CMakeLists.txt  biorobots.h
sample_projects/cancer_biorobots/: CMakeLists.txt  main-cancer_biorobots.cpp
sample_projects/cancer_biorobots/custom_modules/: CMakeLists.txt  cancer_biorobots.h
sample_projects/cancer_immune/: CMakeLists.txt  main-cancer_immune_3D.cpp
sample_projects/cancer_immune/custom_modules/: cancer_immune_3D.h
sample_projects/heterogeneity/: CMakeLists.txt  main-heterogeneity.cpp
sample_projects/heterogeneity/config/: defaultHeterogeneity_settings.xml
sample_projects/heterogeneity/custom_modules/: CMakeLists.txt  heterogeneity.cpp  heterogeneity.h
sample_projects/template/: CMakeLists.txt  main.cpp
sample_projects/template/custom_modules/: CMakeLists.txt  custom.h
sample_projects/virus_macrophage/: CMakeLists.txt  main.cpp
sample_projects/virus_macrophage/custom_modules/: CMakeLists.txt  custom.h
sample_projects/worm/: CMakeLists.txt  main.cpp
sample_projects/worm/custom_modules/: CMakeLists.txt  custom.h
src/: CMakeLists.txt
src/BioFVM/: BioFVM_microenvironment.h  CMakeLists.txt
src/modules/: CMakeLists.txt  PhysiCell_MultiCellDS.h  PhysiCell_geometry.h  PhysiCell_pathology.h  PhysiCell_standard_modules.h  PhysiCell_various_outputs.cpp  PhysiCell_various_outputs.h
src/physicellcore/: CMakeLists.txt  PhysiCell.h  PhysiCell_cell.cpp  PhysiCell_cell.h  PhysiCell_cell_container.h  PhysiCell_phenotype.h  PhysiCell_settings.h
src/python/: CMakeLists.txt  physicell_py.cpp  test_py.cpp
src/python/BioFVM/: CMakeLists.txt  biofvm_py.cpp  biofvm_py.h
src/python/physicellcore/: CMakeLists.txt  physicellcore_py.cpp  physicellcore_py.h
src/python/tests/: CMakeLists.txt  biorobots_py.cpp  biorobots_py.h
