cmake_minimum_required(VERSION 2.8)

#C++ Compiled binaries for Physicell Standard Projects

#PhysiCell Standard Sample Projects
add_subdirectory(heterogeneity)
add_subdirectory(worm)
add_subdirectory(virus_macrophage)
add_subdirectory(cancer_biorobots)
add_subdirectory(biorobots)

#Physicell Project Template
