cmake_minimum_required(VERSION 3.1)

#C++ Compiled binaries for Physicell Standard Projects

#PhysiCell Standard Sample Projects
add_subdirectory(heterogeneity)
add_subdirectory(worm)
add_subdirectory(virus_macrophage)
add_subdirectory(cancer_biorobots)
add_subdirectory(biorobots)

#Physicell Project Template
add_subdirectory(template)

